--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Calculater</title>
-    <link rel="icon" href="download (3).jpg" type="image/x-icon">
+    <link rel="icon" href="download (3).png" type="image/x-icon">
 </head>
 <body>
     <div class="calculator">
@@ -44,3 +44,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
